--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
-    <title>Tic Tac Toe — UI Preview</title>
+    <title>Tic Tac Toe</title>
   </head>
   <body>
     <!--
