turns and display of symbols functionality done

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="sub">Player vs Player — Design preview</div>
           </div>
-          <div class="sub">Turn: <strong>X</strong></div>
+          <div class="sub">Turn: <strong class="turn">X</strong></div>
         </div>
 
         <div class="board" role="grid" aria-label="game grid">
@@ -31,14 +31,14 @@
             class="cell"
             role="gridcell"
             aria-label="cell 1"
-            data-mark="X"
+            data-mark=" "
             tabindex="0"
           ></button>
           <button
             class="cell"
             role="gridcell"
             aria-label="cell 2"
-            data-mark="O"
+            data-mark=" "
           ></button>
           <button
             class="cell"
@@ -57,7 +57,7 @@
             class="cell"
             role="gridcell"
             aria-label="cell 5"
-            data-mark="X"
+            data-mark=" "
           ></button>
           <button
             class="cell"
@@ -70,7 +70,7 @@
             class="cell"
             role="gridcell"
             aria-label="cell 7"
-            data-mark="O"
+            data-mark=" "
           ></button>
           <button
             class="cell"
