win and draw  functionality done

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
 
         <div class="controls">
-          <button class="btn">New Game</button>
+          <button class="btn winnerBtnDisplay"></button>
           <button class="btn ghost">Reset Board</button>
           <div class="small">
             Tip: Use JavaScript to toggle data-mark or inject SVGs for nicer X/O
